Changed layout to make use of Bootstrap instead of float 70 30 width. Fixed layout issues near Add Types button when viewed in 1024x768
GCP-8893

Code reviewed by : Cyrus Venn Quesada

--- a/src/main/webapp/WEB-INF/static/css/fieldbook.css
+++ b/src/main/webapp/WEB-INF/static/css/fieldbook.css
@@ -1189,3 +1189,8 @@ a.fbk-edit-experiment{
 .breeding-method-note span{
 	margin-left: 0;
 }
+
+.nopadding {
+    padding : 0 !important;
+    margin: 0 !important;
+}
